Thu Nov  4 12:59:42 UTC 2010  Don Hudson  <hudsond@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/transport/framework/TransportConfiguration.cpp:
        * dds/DCPS/transport/framework/TransportImpl.cpp:
        * dds/DCPS/transport/multicast/MulticastConfiguration.cpp:
        * dds/DCPS/transport/simpleTCP/SimpleTcpConfiguration.cpp:
        * dds/DCPS/transport/udp/UdpConfiguration.cpp:
        * performance-tests/DCPS/dummyTCP/DummyTcpConfiguration.cpp:

          Removed trailing white space.

Wed Nov  3 19:09:13 UTC 2010  Don Hudson  <dchudson@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastConfiguration.cpp:

          Restored initialization of DEFAULT_TTL to original.

          Changed dump() to output ttl_ in hex.

Wed Nov  3 15:58:38 UTC 2010  Don Hudson  <hudsond@ociweb.com>

        * dds/DCPS/transport/framework/TransportFactory.cpp:

          Changed guard in get_or_create_factory() to include
          finding the transport generator and using the generator to
          register the factory.  Instead of releasing the guard after
          finding the generator and then getting a new guard before
          using the generator to register the factory.


Wed Nov  3 15:29:11 UTC 2010  Don Hudson  <hudsond@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:

          Changed data_received() to skip finding the writer
          when ENTITYKIND_OPENDDS_NIL_WRITER is specified.

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:

          Removed operator<<(ostream& str, WriterInfo::WriterState value)
          since it didn't function as intended on some platforms
          because WriterState is an enum.  Replaced it with get_state_str().

        * dds/DCPS/GuidConverter.cpp:
        * dds/DdsDcpsGuid.idl:

          Added type ENTITYKIND_OPENDDS_NIL_WRITER for use
          in infrastructure testing where there is no writer.
